# AI-Tour-Planning-Bot

./: .gitignore  CNAME  PyWhatKit_DB.txt  README.md  app.py  pyproject.toml  requirements.txt  tool_integration.py  trip_agent.py
.github/workflows/: sync-to-hub.yml
db/: mongo.py
frontend/: config.js  deploy.html  index.html  tripset-full.html
prompts/: prompts.py
tools/: PyWhatKit_DB.txt  booking.py  images.py  maps.py  news.py  places.py  sos.py  weather.py
