[project]
name = "ai-tour-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.4",
    "motor>=3.7.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.14.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pywhatkit>=5.4",
    "selenium>=4.35.0",
    "streamlit>=1.48.1",
    "twilio>=9.7.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
